--- a/gif/src/css/main.css
+++ b/gif/src/css/main.css
@@ -12,6 +12,8 @@
 html,
 body {
 	font-size: 1rem;
+	height: 100vh;
+	width: 100vw;
 }
 
 a {
@@ -25,7 +27,7 @@ a {
 
 .Home {
 	color: #fff;
-	height: 100vh;
+	height: 100%;
 	width: 100vw;
 	display: flex;
 	flex-direction: column;
