--- a/gif/src/css/main.css
+++ b/gif/src/css/main.css
@@ -12,8 +12,6 @@
 html,
 body {
 	font-size: 1rem;
-	height: 100vh;
-	width: 100vw;
 }
 
 a {
@@ -27,8 +25,9 @@ a {
 
 .Home {
 	color: #fff;
-	height: 100%;
 	width: 100vw;
+	height: 100vh;
+	height: calc(var(--vh, 1vh) * 100);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
